working on a notebook. Not tested yet. Swagger is done
